--- a/home/andreig/conf/synergy.conf
+++ b/home/andreig/conf/synergy.conf
@@ -8,7 +8,7 @@ section: screens
     end
 section: links
     openbsd-box.org:
-        right = mihai 
-    mihai:
+        right = mihai.openbsd-box.org 
+    mihai.openbsd-box.org:
         left = openbsd-box.org
 end
